# RepoBoost

./: .gitignore  .repoboost.toml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repoboost-report.json
.github/workflows/: ci.yml  package.yml  publish-pypi.yml  publish-testpypi.yml  repoboost.yml
docs/: PYPI.md  RELEASE.md  TESTPYPI.md
src/repoboost/: badges.py  ci.py  cli.py  config.py  presets.py  project.py  recommendations.py  reports.py  scanner.py  topics.py
tests/: test_badges.py  test_ci.py  test_cli.py  test_config.py  test_presets.py  test_project.py  test_recommendations.py  test_reports.py  test_scanner.py  test_topics.py
