[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repoboost"
version = "0.1.0"
description = "A CLI tool that audits GitHub repositories and suggests practical improvements for better open-source presentation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohammad Azimi" }
]
keywords = [
    "github",
    "repository",
    "readme",
    "cli",
    "open-source",
    "portfolio",
    "developer-tools"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[project.scripts]
repoboost = "repoboost.cli:app"

[tool.pytest.ini_options]
pythonpath = ["src"]