[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repoboost"
version = "0.1.3"
description = "A CLI tool that audits GitHub repositories and suggests practical improvements for better open-source presentation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mohammad Azimi" }
]
keywords = [
    "github",
    "repository",
    "readme",
    "cli",
    "open-source",
    "portfolio",
    "developer-tools",
    "documentation",
    "repository-audit"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Utilities"
]
dependencies = [
    "rich>=13.7.0",
    "tomli>=2.0.1; python_version < '3.11'",
    "typer>=0.12.0"
]

[project.optional-dependencies]
dev = [
    "build>=1.2.0",
    "pytest>=8.0.0",
    "twine>=5.0.0"
]

[project.urls]
Homepage = "https://github.com/mohammad-azimi/RepoBoost"
Repository = "https://github.com/mohammad-azimi/RepoBoost"
Issues = "https://github.com/mohammad-azimi/RepoBoost/issues"
Documentation = "https://github.com/mohammad-azimi/RepoBoost#readme"

[project.scripts]
repoboost = "repoboost.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/repoboost"]

[tool.pytest.ini_options]
pythonpath = ["src"]